# Vulkan1

./: settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/fb/test/vulkan1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMain.cpp  VkValidationLayer.cpp  VkValidationLayer.h  VulkanMain.cpp  VulkanMain.hpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fb/test/vulkan1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
